# candle-alerts

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.claude/: settings.json
.claude/agents/: product-advisor.md
.github/workflows/: tests.yml
candle/: __init__.py  config.py  logging_config.py
candle/alerts/: __init__.py  telegram.py
candle/api/: app.py  auth.py  limiter.py  schemas.py
candle/data/: __init__.py  bit2me.py  exchange_factory.py  fetcher.py  normalizer.py
candle/db/: __init__.py  models.py  repository.py  session.py
candle/indicators/: __init__.py  compute.py  momentum.py  trend.py  volume.py
candle/scheduler/: __init__.py  jobs.py
candle/screener/: __init__.py  conditions.py  engine.py  rules.py
docs/technical/: refactor-report.md  security-audit.md  security-fixes-applied.md
docs/user-guide/: README.md  checklist-alerta-1-minuto.md  common-mistakes.md  how-it-works.md  how-to-use.md  indicators-explained.md  rules-explained.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json
migrations/: env.py
migrations/versions/: 7e8fbe497dc0_initial_schema.py  a4f9b2c1d3e0_add_users_and_user_id_fks.py  f011f5741b77_add_dedup_hours_to_screener_rules.py
scripts/: check_no_secrets.sh  generate_fixtures.py  run.py  seed.py  serve.py
tests/: conftest.py  test_alerts.py  test_api.py  test_bit2me.py  test_fetcher.py  test_indicators.py  test_jobs.py  test_screener.py
tests/fixtures/: btc_4h_100.csv  btc_4h_crossover.csv  (+3 more)
(+20 files in other folders)
