[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candle"
version = "0.1.0"
description = "Crypto market screener and alert system"
requires-python = ">=3.12"
dependencies = [
    # Exchange connectivity
    "ccxt>=4.0.0",
    # Data / indicators
    "pandas>=2.0.0",
    "pandas-ta==0.4.67b0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Alerts
    "python-telegram-bot>=21.0",
    # Config
    "pydantic-settings>=2.0.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    # Observability
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["candle"]
